--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,32 @@
     <string name="text_drink">Drink</string>
     <string name="text_recomendation">Recommendation</string>
     <string name="arrow_left">Back to</string>
+
+    <!-- Profile strings -->
+    <string name="profile">Profile</string>
+    <string name="back">Back</string>
+    <string name="profile_picture">Profile Picture</string>
+    <string name="settings">Settings</string>
+    <string name="help">Help</string>
+    <string name="logout">Logout</string>
+    <string name="visits">Visits</string>
+    <string name="membership">Membership</string>
+    <string name="user_name_default">Jhon Doe</string>
+    <string name="user_email_default">example@gmail.com</string>
+    <string name="visits_count">10 Kunjungan</string>
+    <string name="membership_count">5 Kunjungan</string>
+    <string name="jhon_doe">Jhon Doe</string>
+    <string name="example_email">example@gmail.com</string>
+    <string name="kunjungan">5 Kunjungan</string>
+
+    <!-- Notification strings -->
+    <string name="notification">Notification</string>
+    <string name="reminder_title">Reminder!</string>
+    <string name="reminder_message">Congratulations! You have earned 1000 points for visiting 5 single-use plastic-free places.</string>
+    <string name="culinary_event_title">Culinary events in solo city!</string>
+    <string name="culinary_event_message">Event in solo city "Caring for cleanliness starts with food", interesting event and don't forget to attend!</string>
+    <string name="culinary_journey_title">A reminder for your culinary journey!</string>
+    <string name="culinary_journey_message">Enjoy your culinary journey and get your fill of solo culinary delights. Happy adventures!</string>
+    <string name="activate_reminder">Activate reminder!</string>
+    <string name="days_ago">1 days ago</string>
 </resources>
