--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,71 +1,69 @@
 <resources>
     <string name="app_name">Kuliner Kita</string>
     <string name="splash">KulinerKita</string>
-    <string name="welcome">Welcome to KulinerKita!</string>
+    <string name="welcome">Selamat datang di KulinerKita!</string>
     <string name="onboarding_screens">Onboarding screens</string>
-    <string name="next">Next</string>
-    <string name="skip">Skip</string>
-    <string name="desc_ob_1">Discover authentic and eco-friendly culinary adventures in every corner of the city.</string>
-    <string name="tittle_ob2">Customized Recomized Recommendations for You</string>
-    <string name="desc_ob2">Explore culinary options that suit your preferences and current location.</string>
-    <string name="tittle_ob3">Supporting Local Economy and Environmentally Friendly</string>
-    <string name="desc_ob3">With KulinerKita, every visit means support for UMKM and local communities.</string>
-    <string name="tittle_ob4">Zero Waste Food Practice</string>
-    <string name="desc_ob4">Look for eateries that support sustainability with minimal plastic use and donated food.</string>
-    <string name="desc_ob5">Discover authentic and eco-friendly culinary adventures in every corner of the city.</string>
-    <string name="create_your_account">Create Your Account</string>
-    <string name="already_have_an_account">Already have an account? </string>
-    <string name="sign_in"> Sign In</string>
-    <string name="sign_in_with_google">Sign in with Google</string>
+    <string name="next">Selanjutnya</string>
+    <string name="skip">Lewati</string>
+    <string name="desc_ob_1">Temukan petualangan kuliner autentik dan ramah lingkungan di setiap sudut kota.</string>
+    <string name="tittle_ob2">Rekomendasi Khusus untuk Anda</string>
+    <string name="desc_ob2">Jelajahi pilihan kuliner yang sesuai dengan preferensi dan lokasi Anda saat ini.</string>
+    <string name="tittle_ob3">Mendukung Ekonomi Lokal dan Ramah Lingkungan</string>
+    <string name="desc_ob3">Dengan KulinerKita, setiap kunjungan berarti dukungan untuk UMKM dan komunitas lokal.</string>
+    <string name="tittle_ob4">Praktik Makanan Tanpa Limbah</string>
+    <string name="desc_ob4"> Carilah tempat makan yang mendukung keberlanjutan dengan penggunaan plastik minimal dan makanan yang disumbangkan.</string>
+    <string name="desc_ob5">Temukan petualangan kuliner autentik dan ramah lingkungan di setiap sudut kota.</string>
+    <string name="create_your_account">Buat Akun Anda</string>
+    <string name="already_have_an_account">Sudah memiliki akun?</string>
+    <string name="sign_in">Masuk</string>
+    <string name="sign_in_with_google">Masuk dengan Google</string>
     <string name="google_icon">google icon</string>
     <string name="facebook_icon">facebook icon</string>
-    <string name="agree_with_terms_conditions">Agree with</string>
+    <string name="agree_with_terms_conditions">Setuju dengan</string>
     <string name="terms_conditions">Terms &amp; Conditions</string>
-    <string name="create_account">Create Account</string>
-    <string name="fill_your_information_below">Fill your information below</string>
-    <string name="name">Name</string>
-    <string name="name_hint">Enter Full Name</string>
+    <string name="fill_your_information_below">Isi informasi Anda di bawah ini</string>
+    <string name="name">Nama</string>
+    <string name="name_hint">Masukkan Nama Lengkap</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
-    <string name="sign_up">Sign Up</string>
-    <string name="welcome_back_message">Hi! Welcome back, you’re been missed</string>
-    <string name="email_hint">Enter Your Email</string>
-    <string name="password_hint">Enter Password</string>
-    <string name="forgot_password">Forgot Password?</string>
-    <string name="no_account_message">Don’t have an account? </string>
-    <string name="forgot_password_clicked">Forgot Password Clicked</string>
+    <string name="sign_up">Daftar</string>
+    <string name="welcome_back_message">Hai! Selamat datang kembali, kau dirindukan</string>
+    <string name="email_hint">Masukkan Email Anda</string>
+    <string name="password_hint">Masukkan Kata Sandi</string>
+    <string name="forgot_password">Lupa Kata Sandi?</string>
+    <string name="no_account_message">Tidak memiliki akun?</string>
+    <string name="forgot_password_clicked">Lupa Kata Sandi Diklik</string>
 
     <!-- Beranda strings -->
-    <string name="name_users">Hi,</string>
+    <string name="name_hai">Hai,</string>
     <string name="name_users_bold">John Doe</string>
-    <string name="culiner_kategori">Categories Culinary</string>
+    <string name="culiner_kategori">Kategori Kuliner</string>
     <string name="notification_icon">Notification icon</string>
     <string name="search_icon">Search icon</string>
     <string name="name_weather">25 Celcius</string>
     <string name="name_location">Solo, Surakarta</string>
-    <string name="text_food">Food</string>
-    <string name="text_drink">Drink</string>
-    <string name="text_recomendation">Recommendation</string>
+    <string name="text_food">Makanan</string>
+    <string name="text_drink">Minuman</string>
+    <string name="text_recomendation">Rekomendasi</string>
     <string name="arrow_left">Back to</string>
-    <string name="title_notifications">Notifications</string>
-    <string name="title_favorite">Favorite</string>"
-    <string name="title_news">News</string>
-    <string name="title_profile">Profile</string>
+    <string name="title_notifications">Notifikasi</string>
+    <string name="title_favorite">Favorit</string>"
+    <string name="title_news">Berita</string>
+    <string name="title_profile">Profil</string>
     <string name="title_home">Home</string>
     <string name="nama_restoran">Warteg Gang Mangga</string>
     <string name="alamat_restoran">Jl. Letjen Suprapto No. 123, Solo</string>
     <string name="categori_suhu">Dingin</string>
     <string name="categori_eco_friendly">Eco-friendly</string>
     <string name="rating">4.5</string>
-    <string name="hello_blank_fragment">This is a blank fragment</string>
 
     <!-- Profile strings -->
-    <string name="profile">Profile</string>
+    <string name="profile">Profil</string>
     <string name="back">Back</string>
     <string name="profile_picture">Profile Picture</string>
-    <string name="settings">Settings</string>
-    <string name="help">Help</string>
-    <string name="logout">Logout</string>
+    <string name="settings">Pengaturan</string>
+    <string name="help">Bantuan</string>
+    <string name="logout">Keluar</string>
     <string name="visits">Visits</string>
     <string name="membership">Membership</string>
     <string name="user_name_default">Jhon Doe</string>
@@ -77,20 +75,28 @@
     <string name="kunjungan">5 Kunjungan</string>
 
     <!-- Notification strings -->
-    <string name="notification">Notification</string>
-    <string name="reminder_title">Reminder</string>
-    <string name="reminder_message">Congratulations You have earned 1000 points for visiting 5 single use plastic free places.</string>
-    <string name="culinary_event_title">Culinary events in solo city</string>
-    <string name="culinary_event_message">Event in solo city Caring for cleanliness starts with food interesting event and dont forget to attend</string>
+    <string name="notification">Notifikasi</string>
+    <string name="reminder_title">Pengingat</string>
+    <string name="reminder_message">Selamat, Anda telah mendapatkan 1000 poin karena telah mengunjungi 5 tempat bebas plastik sekali pakai.</string>
+    <string name="culinary_event_title">Acara kuliner di kota solo</string>
+    <string name="culinary_event_message">Acara di kota solo Peduli kebersihan dimulai dari makanan acara yang menarik dan jangan lupa untuk hadir</string>
     <string name="culinary_journey_title">A reminder for your culinary journey</string>
     <string name="culinary_journey_message">Enjoy your culinary journey and get your fill of solo culinary delights. Happy adventures!</string>
-    <string name="activate_reminder">Activate reminder</string>
-    <string name="days_ago">1 days ago</string>
+    <string name="activate_reminder">Mengaktifkan pengingat</string>
+    <string name="days_ago">1 hari yang lalu</string>
 
     <!-- News strings -->
+    <string name="name_news">Berita</string>
     <string name="desc">Deskripsi singkat berita akan ditampilkan di sini.</string>
     <string name="time">2 jam yang lalu</string>
     <string name="news_title">Judul Berita</string>
     <string name="news_image">Gambar Berita</string>
 
+    <!-- Detail strings -->
+    <string name="name_detail">Detail</string>
+    <string name="title_kulian">Kuliner</string>">
+    <string name="name_kuliner">Bakso Malang</string>
+    <string name="name_user">Jhon Doe</string>
+    <string name="days_ago_feedback">1 hari yang lalu</string>
+    <string name="desc_feedback">Lorem ipsum dolor sit amet, consectetur adipisicing elit,sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
 </resources>
