--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -107,4 +107,6 @@
     <!-- Search String -->
     <string name="search_hint">Cari restoran...</string>
     <string name="search_icon_desc">Search icon</string>
+    <string name="title_activity_maps">MapsActivity</string>
+    <string name="cek_lokasi">Cek Lokasi</string>
 </resources>
