--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -112,4 +112,5 @@
     <string name="cek_lokasi">Cek Lokasi</string>
     <string name="name_notif">Notifikasi</string>
     <string name="name_kategori">Kategori</string>
+    <string name="phone_number">Phone Number</string>
 </resources>
