Maps 90% dan perbaikan profile onprogress

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -116,4 +116,5 @@
     <string name="tambah_lokasi">Tambah Lokasi</string>
     <string name="title_activity_maps_navigation">MapsNavigationActivity</string>
     <string name="koneksi_internet">Tidak Ada Koneksi Internet</string>
+    <string name="mulai_lokasi">Mulai Perjalanan</string>
 </resources>
