--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -119,5 +119,5 @@
     <string name="mulai_lokasi">Mulai Perjalanan</string>
 
     <!-- Broadcast String -->
-    <string name="loading_navigation">Selamat menikmati perjalanan kuliner di kota Solo❤️</string>
+    <string name="loading_navigation">Selamat menikmati perjalanan kuliner di kota Surakarta❤️</string>
 </resources>
